# ZPPMatches

./: Cargo.toml  README.md  state.json
backend/: Cargo.toml  setup_test.sh
backend/src/: main.rs  matching.rs  models.rs  modules.rs  routes.rs  state.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: home.rs  lib.rs  login_group.rs
frontend/src/pages/: admin.rs  dashboard_company.rs  dashboard_group.rs  home.rs  login.rs  login_company.rs  match_page.rs  mod.rs  not_found.rs  register.rs
shared/src/: lib.rs
