[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tower = "0.4"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
shared = { path = "../shared" }
