[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"
gloo-net = "0.5"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
web-sys = { version = "0.3.83", features = ["console"] }
serde_json = "1.0.145"
gloo-storage = "0.2" 
chrono = { version = "0.4.42", features = ["wasmbind"] }
